# pykedex

./: .env  AGENTS.md  README.md  __init__.py  app.py  config.py  debug_buttons.py  debug_display.py  display.py  input.py  inspect_st7735.py  main.py  pyproject.toml
data/: pokemon.json
screens/: base.py  boot.py  home.py  pokemon_detail.py  pokemon_list.py  settings.py
